Добавил немного кода и фотографию

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
         <nav>
             <ul>
                 <li><a href="#about">Обо мне</a></li>
+                <li><a href="#skill">Список навыков и умений</a></li>
+                <li><a href="#projects">Примеры выполненных проектов</a></li>
+                <li><a href="#contact">Контактная информация</a></li>
             </ul>
         </nav>
-
-
-
     </header>
+    <main>
+        <section id="about">
+            <img src="/media/photo_1.jpg" alt="Упс, изображение не удалось загрузить :(">
+
+        </section>
+    </main>
     
 </body>
 </html>
