Добавил много кода с дополнительной информацией

--- a/index.html
+++ b/index.html
@@ -22,9 +22,20 @@
     <main>
         <section id="about">
             <img src="/media/photo_1.jpg" alt="Упс, изображение не удалось загрузить :(">
+            <h2>Обо мне</h2>
+            <p>Краткая информация</p>
+        </section>
+        <section id="projects">
+            <h2>Проекты</h2>
+            <p>Описание моих проектов</p>
+        </section>
+        <section id="contact">
+            <h2>Контакты</h2>
+            <p>Как со мной связаться</p>
 
         </section>
     </main>
     
+
 </body>
 </html>
