Начал стилизовать свой "прекрасный" портфолио

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <section id="contact">
             <h2>Контакты</h2>
             <p>Как со мной связаться</p>
-
         </section>
     </main>
-    
-
+    <footer>
+        <p>Патрашков Максим Юрьевич</p>
+    </footer>
 </body>
 </html>
