Код полностью готов! Ура!

--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
         <section id="about">
             <img src="/media/photo_1.jpg" alt="Упс, изображение не удалось загрузить :(">
             <h2>Обо мне</h2>
-            <p>Краткая информация</p>
+            <p>Сижу играю в Amazing Online</p>
+            <p>Очень хочу разрабатывать обновления в Amazing Online</p>
+            <p>Являюсь администратором этого же проекта</p>
+            <p>Мечтаю заняться веб-сайтами и заниматься IT на профессиональном уровне</p>
         </section>
         <section id="projects">
             <h2>Проекты</h2>
-            <p>Описание моих проектов</p>
+            <p>(В скором времени новые проекты обязательно появлятся, а пока я играю)</p>
         </section>
         <section id="contact">
             <h2>Контакты</h2>
-            <p>Как со мной связаться</p>
+            <p>Телефон: 8-987-577-70-61</p>
+            <p>ИНН: 212205819580</p>
         </section>
     </main>
     <footer>
